kubernetes/app/podsync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podsync
  namespace: podsync
spec:
  selector:
    app: podsync
  ports:
    - port: 8080
      targetPort: 8080
