kubernetes/app/podsync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podsync
  namespace: podsync
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authelia-chain-authelia-authelia-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - ${PODSYNC_HOST}
      secretName: podsync-tls
  rules:
    - host: ${PODSYNC_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podsync
                port:
                  number: 8080
